--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -20,7 +20,7 @@
  
 .@{ui-class-prefix}-button {
     .button-variant(@default-button-text-color, @default-button-background-color, @default-button-border-color);
-    .button-size(@default-button-height, @default-button-padding, @base-font-size, @default-border-radius);
+    .button-size(@default-button-height, @default-button-padding, @base-font-size, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-primary {
@@ -91,38 +91,38 @@
 .@{ui-class-prefix}-button-group.mini .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.mini .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.mini {
-    .button-size(@default-button-height * 0.8125, @default-button-padding * 0.8125, @base-font-size * 0.8125, @default-border-radius);
+    .button-size(@default-button-height * 0.8125, @default-button-padding * 0.8125, @base-font-size * 0.8125, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group.small .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.small .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.small {
-    .button-size(@default-button-height * 0.875, @default-button-padding * 0.875, @base-font-size * 0.875, @default-border-radius);
+    .button-size(@default-button-height * 0.875, @default-button-padding * 0.875, @base-font-size * 0.875, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group.large .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.large .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.large {
-    .button-size(@default-button-height * 1.125, @default-button-padding * 1.125, @base-font-size * 1.125, @default-border-radius);
+    .button-size(@default-button-height * 1.125, @default-button-padding * 1.125, @base-font-size * 1.125, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group.big .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.big .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.big { 
-    .button-size(@default-button-height * 1.25, @default-button-padding * 1.25, @base-font-size * 1.25, @default-border-radius);
+    .button-size(@default-button-height * 1.25, @default-button-padding * 1.25, @base-font-size * 1.25, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group.huge .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.huge .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.huge {
     font-size: 1.375em;
-    .button-size(@default-button-height * 1.375, @default-button-padding * 1.375, @base-font-size * 1.375, @default-border-radius);
+    .button-size(@default-button-height * 1.375, @default-button-padding * 1.375, @base-font-size * 1.375, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group.massive .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-input.massive .ui-action-container .@{ui-class-prefix}-button,
 .@{ui-class-prefix}-button.massive {
-    .button-size(@default-button-height * 1.5, @default-button-padding * 1.5, @base-font-size * 1.5, @default-border-radius);
+    .button-size(@default-button-height * 1.5, @default-button-padding * 1.5, @base-font-size * 1.5, @default-box-border-radius);
 }
 
 .@{ui-class-prefix}-button-group {
