--- a/demo.css
+++ b/demo.css
@@ -17,7 +17,10 @@
    Menu
    ========= */
 /* =========
-   Menu
+   Checkbox & Radio
+   ========= */
+/* =========
+   z-index
    ========= */
 /*
 * 
