--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -6,7 +6,7 @@
 @text-color: @neutral-base-color;
 @body-color: @primary-bg-color;
 @body-line-height: 1.3;
-@default-border-radius: 4px;
+@default-box-border-radius: 4px;
 
 // padding
 @gutter: 10px;
@@ -40,7 +40,6 @@
 @input-placeholder-color: #BBBBBB;
 // tab color, webkit only
 @input-tap-color: rgba(255, 255, 255, 0);
-@input-border-radius: @default-border-radius;
 @input-padding: 0.65em 1em;
 @input-default-height: 40px; 
 
@@ -118,9 +117,10 @@
 
 @table-border-color: @black-40;
 @table-caption-text-color: @black;
-@table-caption-font-size: @base-font-size;
+@table-caption-font-size: @base-font-size * 0.8;
 @table-caption-padding: 1em 0;
 @table-cell-padding: 0.5em 1em;
+@table-cell-font-size: @base-font-size * 0.75;
 @table-head-background-color: #e0e0e0;
 @table-head-text-color: #000;
 @table-hover-line-background-color: @black-10;
@@ -152,9 +152,23 @@
 @dropdown-heading-padding: 0.5em 1em;
 @dropdown-heading-text-size: @base-font-size * 0.875;
 
+/* =========
+   Checkbox & Radio
+   ========= */
+@checkbox-background-color: @primary-bg-color;
+@checkbox-background-active-color: #F5F5F5;
+@checkbox-radio-checked-color: @primary-color;
+@checkbox-label-text-color: rgba(0, 0, 0, 0.6);
+@checkbox-label-text-hover-color: rgba(0, 0, 0, 0.8);
+@checkbox-border-color: rgba(0, 0, 0, 0.2);
+@checkbox-border-hover-color: rgba(0, 0, 0, 0.3);
+@checkbox-radio-label-padding: 1.5em;
+@checkbox-slider-off-color: @primary-color;
+@checkbox-slider-on-color: @complement-base-color;
+
 
 /* =========
-   Menu
+   z-index
    ========= */
 @zindex-navbar:            1000;
 @zindex-dropdown:          1000;
@@ -184,7 +198,7 @@
 @default-code-font-family: Monaco, Consolas, monospace;
 
 // default visual settings
-@default-border-radius: 5px;
+@default-border-radius: @default-box-border-radius;
 @default-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
 
 // z-index settings (compatible with BootStrap, ESUI)
