--- a/src/css/type.less
+++ b/src/css/type.less
@@ -24,7 +24,7 @@ h4, h5, h6 {
 }
 
 body {
-    font-size: @default-font-size;
+    font-size: (@default-font-size)px;
     line-height: 1.3;
 }
 
@@ -32,7 +32,7 @@ p.indent {
     text-indent: 2em;
 }
 
-code {
+code,kbd {
     color: @code-text-color;
     white-space: nowrap;
     border: 1px solid @code-border-color;
