--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -166,6 +166,14 @@
 @checkbox-slider-off-color: @primary-color;
 @checkbox-slider-on-color: @complement-base-color;
 
+// Form
+@form-legend-font-size: 1.25em;
+@form-legend-text-color: @text-color;
+@form-legend-padding: 0.5em 0;
+@form-legend-margin: 0 0 0.5em;
+@form-legend-bottom-border: 1px solid @black-20;
+@form-label-font-size: 1em;
+@form-row-bottom-margin: 0.8em;
 
 /* =========
    z-index
