--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,8 +1,12 @@
 @import "./est.less";
+// variables
+@import "./variable.less";
+@import "./mixins.less";
 
-//@import "./normalize.less";
+// normalize
 .global-normalize();
 
+// 
 @import "./base.less";
 @import "./utils.less";
 @import "./type.less";
