--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -1,53 +1,99 @@
+// Name:            Button
+// Description:     Defines styles for buttons
+//
+// Component:       `ui-button`
+//
+// Sub-objects:     `ui-button-group`
+//                  `ui-button-dropdown`
+//
+// Variants:        `ui-primary`
+//                  `ui-secondary`
+//                  `ui-success`
+//                  `ui-danger`
+//                  `ui-info`
+//                  `ui-warning`
+//                  `ui-link`
+//
+// Sizes:           `ui-fluid`
+//                  `ui-mini`
+//                  `ui-small`
+//                  `ui-large`
+//                  `ui-big`
+//                  `ui-huge`
+//                  `ui-massive`
+//
+// States:          `ui-active`
+//                  `ui-hover`
+//                  `ui-disabled`
+//
+// Mixins:          `.button-variant(@text-color, @background-color, @border-color)`
+//                  `.button-size(@height, @v-padding, @font-size)`
+//
+// Markup:
+//
+// <!-- ui-button-group -->
+// <div class="ui-button-group">
+//     <button class="ui-button"></button>
+//     <button class="ui-button"></button>
+// </div>
+//
+// <!-- ui-button-dropdown -->
+// <div class="ui-button-dropdown" data-ui-dropdown>
+//     <button class="ui-button"></button>
+//     <div class="ui-dropdown">
+//         ...
+//     </div>
+// </div>
+//
+// ========================================================================
+
 .@{ui-class-prefix}-button {
+    // for `a` elements
     display: inline-block;
-    white-space: nowrap; 
+    .box-sizing(border-box);
     text-align: center;
-    cursor: pointer;
-    -webkit-user-drag: none;
+    vertical-align: middle;
     .user-select(none);
+    &:hover {
+        text-decoration: none;
+    }
     &::-moz-focus-inner {
         padding: 0;
         border: 0;
     }
-
-    border: 1px solid transparent;
-    &:hover {
-        text-decoration: none;
+    &:focus {
+        outline: 0;
     }
-    vertical-align: middle;
-    font-family: @default-font-family;
-}
- 
-.@{ui-class-prefix}-button {
+    border: 1px solid transparent;
     .button-variant(@default-button-text-color, @default-button-background-color, @default-button-border-color);
-    .button-size(@default-button-height, @default-button-padding, @base-font-size, @default-box-border-radius);
+    .button-size(@default-button-height, @default-button-padding, @base-font-size);
 }
 
-.@{ui-class-prefix}-button-primary {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-primary {
     .button-variant(@primary-button-text-color, @primary-button-background-color, @primary-button-border-color);
 }
 
-.@{ui-class-prefix}-button-secondary {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-secondary {
     .button-variant(@secondary-button-text-color, @secondary-button-background-color, @secondary-button-border-color);
 }
 
-.@{ui-class-prefix}-button-success {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-success {
     .button-variant(@success-button-text-color, @success-button-background-color, @success-button-border-color);
 }
 
-.@{ui-class-prefix}-button-danger {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-danger {
     .button-variant(@danger-button-text-color, @danger-button-background-color, @danger-button-border-color);
 }
 
-.@{ui-class-prefix}-button-info {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-info {
     .button-variant(@info-button-text-color, @info-button-background-color, @info-button-border-color);
 }
 
-.@{ui-class-prefix}-button-warning {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-warning {
     .button-variant(@warning-button-text-color, @warning-button-background-color, @warning-button-border-color);
 }
 
-.@{ui-class-prefix}-button-link {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-link {
     .link-like();
     background: none;
     &:hover {
@@ -56,73 +102,68 @@
     border: 0;
 }
 
-.@{ui-class-prefix}-icon-button {
-    padding: 0 @default-icon-button-padding;
-}
-
-.@{ui-class-prefix}-button.fluid {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-fluid {
     display: block;
     width: 100%;
 }
 
-.@{ui-class-prefix}-button:focus {
-    outline: 0;
-}
-.@{ui-class-prefix}-button.active,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-active,
 .@{ui-class-prefix}-button:active {
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
 }
 
 .@{ui-class-prefix}-button[disabled],
-.@{ui-class-prefix}-button.disabled,
-.@{ui-class-prefix}-button.disabled:hover,
-.@{ui-class-prefix}-button.disabled:focus,
-.@{ui-class-prefix}-button.disabled:active {
+.@{ui-class-prefix}-button.@{ui-class-prefix}-disabled,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-disabled:hover,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-disabled:focus,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-disabled:active {
     .opacity(40);
     cursor: not-allowed;
 }
 
-/* Firefox: Get rid of the inner focus border */
-.@{ui-class-prefix}-button::-moz-focus-inner{
-    padding: 0;
-    border: 0;
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-mini .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-mini .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-mini {
+    .button-size(@default-button-height * 0.8125, @default-button-padding * 0.8125, @base-font-size * 0.8125);
 }
 
-.@{ui-class-prefix}-button-group.mini .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.mini .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.mini {
-    .button-size(@default-button-height * 0.8125, @default-button-padding * 0.8125, @base-font-size * 0.8125, @default-box-border-radius);
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-small .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-small .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-small {
+    .button-size(@default-button-height * 0.875, @default-button-padding * 0.875, @base-font-size * 0.875);
 }
 
-.@{ui-class-prefix}-button-group.small .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.small .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.small {
-    .button-size(@default-button-height * 0.875, @default-button-padding * 0.875, @base-font-size * 0.875, @default-box-border-radius);
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-large .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-large .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-large {
+    .button-size(@default-button-height * 1.125, @default-button-padding * 1.125, @base-font-size * 1.125);
 }
 
-.@{ui-class-prefix}-button-group.large .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.large .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.large {
-    .button-size(@default-button-height * 1.125, @default-button-padding * 1.125, @base-font-size * 1.125, @default-box-border-radius);
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-big .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-big .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-big { 
+    .button-size(@default-button-height * 1.25, @default-button-padding * 1.25, @base-font-size * 1.25);
 }
 
-.@{ui-class-prefix}-button-group.big .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.big .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.big { 
-    .button-size(@default-button-height * 1.25, @default-button-padding * 1.25, @base-font-size * 1.25, @default-box-border-radius);
-}
-
-.@{ui-class-prefix}-button-group.huge .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.huge .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.huge {
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-huge .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-huge .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-huge {
     font-size: 1.375em;
-    .button-size(@default-button-height * 1.375, @default-button-padding * 1.375, @base-font-size * 1.375, @default-box-border-radius);
+    .button-size(@default-button-height * 1.375, @default-button-padding * 1.375, @base-font-size * 1.375);
 }
 
-.@{ui-class-prefix}-button-group.massive .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-input.massive .ui-action-container .@{ui-class-prefix}-button,
-.@{ui-class-prefix}-button.massive {
-    .button-size(@default-button-height * 1.5, @default-button-padding * 1.5, @base-font-size * 1.5, @default-box-border-radius);
+.@{ui-class-prefix}-button-group.@{ui-class-prefix}-massive .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-input.@{ui-class-prefix}-massive .ui-action-container .@{ui-class-prefix}-button,
+.@{ui-class-prefix}-button.@{ui-class-prefix}-massive {
+    .button-size(@default-button-height * 1.5, @default-button-padding * 1.5, @base-font-size * 1.5);
+}
+
+.@{ui-class-prefix}-button-dropdown {
+    // 1. Behave like buttons
+    display: inline-block;
+    vertical-align: middle;
+    // 2. Create position context for dropdowns
+    position: relative;
 }
 
 .@{ui-class-prefix}-button-group {
@@ -146,4 +187,27 @@
 .@{ui-class-prefix}-button-group > .@{ui-class-prefix}-button:last-child:not(:first-child) {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
+}
+
+.button-variant(@text-color, @background-color, @border-color) {
+    color: @text-color;
+    background-color: @background-color;
+    border-color: @border-color;
+    &:hover,&.hover {
+        color: @text-color;
+        background-color: darken(@background-color, 10%);
+        border-color: darken(@border-color, 12%);
+    }
+}
+ 
+.button-size(@height, @v-padding, @font-size) { 
+    padding: 0 @v-padding;
+    font-size: @font-size;
+    border-radius: @default-box-border-radius;
+    line-height: @height - 2;
+    height: @height;
+    // calculate icon padding
+    &.@{ui-class-prefix}-icon-only {
+        padding: 0 (@height - 2 - @font-size)/2;
+    }
 }
