--- a/src/css/utils.less
+++ b/src/css/utils.less
@@ -81,7 +81,11 @@
   margin-right: -0.25em; /* Adjusts for spacing */
 }
 
-.block {
+.@{ui-class-prefix}-block {
     display: block !important;
+}
+
+.@{ui-class-prefix}-block-center {
+    .center-block();
 }
 
