--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -160,8 +160,11 @@
 @checkbox-radio-checked-color: @primary-color;
 @checkbox-label-text-color: rgba(0, 0, 0, 0.6);
 @checkbox-label-text-hover-color: rgba(0, 0, 0, 0.8);
+@checkbox-label-text-active-color: rgba(0, 0, 0, 0.8);
+@checkbox-label-text-disabled-color: rgba(0, 0, 0, 0.3);
 @checkbox-border-color: rgba(0, 0, 0, 0.2);
 @checkbox-border-hover-color: rgba(0, 0, 0, 0.3);
+@checkbox-border-active-color: rgba(0, 0, 0, 0.3);
 @checkbox-radio-label-padding: 1.5em;
 @checkbox-slider-off-color: @primary-color;
 @checkbox-slider-on-color: @complement-base-color;
