--- a/assets/main.css
+++ b/assets/main.css
@@ -27,58 +27,6 @@
 * ESF 变量，一般不用直接修改这里
 ×
 */
-.esf-grid-u,
-.ui-u,
-.ui-u-1,
-.ui-u-golden-ratio,
-.ui-u-golden-ratio-1,
-.ui-u-1-1,
-.ui-u-2-2,
-.ui-u-1-2,
-.ui-u-3-3,
-.ui-u-2-3,
-.ui-u-1-3,
-.ui-u-4-4,
-.ui-u-3-4,
-.ui-u-2-4,
-.ui-u-1-4,
-.ui-u-24-24,
-.ui-u-23-24,
-.ui-u-22-24,
-.ui-u-21-24,
-.ui-u-20-24,
-.ui-u-19-24,
-.ui-u-18-24,
-.ui-u-17-24,
-.ui-u-16-24,
-.ui-u-15-24,
-.ui-u-14-24,
-.ui-u-13-24,
-.ui-u-12-24,
-.ui-u-11-24,
-.ui-u-10-24,
-.ui-u-9-24,
-.ui-u-8-24,
-.ui-u-7-24,
-.ui-u-6-24,
-.ui-u-5-24,
-.ui-u-4-24,
-.ui-u-3-24,
-.ui-u-2-24,
-.ui-u-1-24,
-.ui-u-5-5,
-.ui-u-4-5,
-.ui-u-3-5,
-.ui-u-2-5,
-.ui-u-1-5 {
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  letter-spacing: normal;
-  word-spacing: normal;
-  vertical-align: top;
-  text-rendering: auto;
-}
 /*! normalize.css v1.1.2 | MIT License | git.io/normalize */
 /* ==========================================================================
        Base
@@ -737,8 +685,14 @@ ui-disabled {
   margin-right: -0.25em;
   /* Adjusts for spacing */
 }
-.block {
+.ui-block {
   display: block !important;
+}
+.ui-block-center {
+  display: block !important;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 h1,
 h2,
@@ -943,13 +897,6 @@ ol ol {
   padding: 0.5em 1em;
   font-size: 12px;
 }
-/*!
-Pure v0.5.0
-Copyright 2014 Yahoo! Inc. All rights reserved.
-Licensed under the BSD License.
-https://github.com/yui/pure/blob/master/LICENSE.md
-*/
-/*csslint regex-selectors:false, known-properties:false, duplicate-properties:false*/
 .ui-g {
   letter-spacing: -0.31em;
   /* Webkit: collapse white-space between units */
@@ -996,13 +943,6 @@ https://github.com/yui/pure/blob/master/LICENSE.md
 .ui-g {
   word-spacing: -0.43em;
 }
-/*
-Resets the font family back to the OS/browser's default sans-serif font,
-this the same font stack that Normalize.css sets for the `body`.
-*/
-.ui-g [class*="ui-u"] {
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
 .ui-u-1 {
   width: 100%;
 }
@@ -1012,161 +952,370 @@ this the same font stack that Normalize.css sets for the `body`.
 .ui-u-golden-ratio-1 {
   width: 38.2%;
 }
+.esf-grid-u,
+.ui-u,
+.ui-u-1,
+.ui-u-golden-ratio,
+.ui-u-golden-ratio-1,
+.ui-u-1-1,
+.ui-u-2-2,
+.ui-u-1-2,
+.ui-u-3-3,
+.ui-u-2-3,
+.ui-u-1-3,
+.ui-u-4-4,
+.ui-u-3-4,
+.ui-u-2-4,
+.ui-u-1-4,
+.ui-u-24-24,
+.ui-u-23-24,
+.ui-u-22-24,
+.ui-u-21-24,
+.ui-u-20-24,
+.ui-u-19-24,
+.ui-u-18-24,
+.ui-u-17-24,
+.ui-u-16-24,
+.ui-u-15-24,
+.ui-u-14-24,
+.ui-u-13-24,
+.ui-u-12-24,
+.ui-u-11-24,
+.ui-u-10-24,
+.ui-u-9-24,
+.ui-u-8-24,
+.ui-u-7-24,
+.ui-u-6-24,
+.ui-u-5-24,
+.ui-u-4-24,
+.ui-u-3-24,
+.ui-u-2-24,
+.ui-u-1-24,
+.ui-u-5-5,
+.ui-u-4-5,
+.ui-u-3-5,
+.ui-u-2-5,
+.ui-u-1-5 {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  letter-spacing: normal;
+  word-spacing: normal;
+  vertical-align: top;
+  text-rendering: auto;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+}
 .ui-u-1-1 {
   width: 100%;
   *width: 99.969%;
+}
+.ui-offset-1-1 {
+  margin-left: 100%;
+  *margin-left: NaN%;
 }
 .ui-u-2-2 {
   width: 100%;
   *width: 99.969%;
 }
+.ui-offset-2-2 {
+  margin-left: 100%;
+  *margin-left: NaN%;
+}
 .ui-u-1-2 {
   width: 50%;
   *width: 49.969%;
+}
+.ui-offset-1-2 {
+  margin-left: 50%;
+  *margin-left: NaN%;
 }
 .ui-u-3-3 {
   width: 100%;
   *width: 99.969%;
 }
+.ui-offset-3-3 {
+  margin-left: 100%;
+  *margin-left: NaN%;
+}
 .ui-u-2-3 {
   width: 66.66666667%;
   *width: 66.63566667%;
+}
+.ui-offset-2-3 {
+  margin-left: 66.66666667%;
+  *margin-left: NaN%;
 }
 .ui-u-1-3 {
   width: 33.33333333%;
   *width: 33.30233333%;
 }
+.ui-offset-1-3 {
+  margin-left: 33.33333333%;
+  *margin-left: NaN%;
+}
 .ui-u-4-4 {
   width: 100%;
   *width: 99.969%;
+}
+.ui-offset-4-4 {
+  margin-left: 100%;
+  *margin-left: NaN%;
 }
 .ui-u-3-4 {
   width: 75%;
   *width: 74.969%;
 }
+.ui-offset-3-4 {
+  margin-left: 75%;
+  *margin-left: NaN%;
+}
 .ui-u-2-4 {
   width: 50%;
   *width: 49.969%;
+}
+.ui-offset-2-4 {
+  margin-left: 50%;
+  *margin-left: NaN%;
 }
 .ui-u-1-4 {
   width: 25%;
   *width: 24.969%;
 }
+.ui-offset-1-4 {
+  margin-left: 25%;
+  *margin-left: NaN%;
+}
 .ui-u-24-24 {
   width: 100%;
   *width: 99.969%;
+}
+.ui-offset-24-24 {
+  margin-left: 100%;
+  *margin-left: NaN%;
 }
 .ui-u-23-24 {
   width: 95.83333333%;
   *width: 95.80233333%;
 }
+.ui-offset-23-24 {
+  margin-left: 95.83333333%;
+  *margin-left: NaN%;
+}
 .ui-u-22-24 {
   width: 91.66666667%;
   *width: 91.63566667%;
+}
+.ui-offset-22-24 {
+  margin-left: 91.66666667%;
+  *margin-left: NaN%;
 }
 .ui-u-21-24 {
   width: 87.5%;
   *width: 87.469%;
 }
+.ui-offset-21-24 {
+  margin-left: 87.5%;
+  *margin-left: NaN%;
+}
 .ui-u-20-24 {
   width: 83.33333333%;
   *width: 83.30233333%;
+}
+.ui-offset-20-24 {
+  margin-left: 83.33333333%;
+  *margin-left: NaN%;
 }
 .ui-u-19-24 {
   width: 79.16666667%;
   *width: 79.13566667%;
 }
+.ui-offset-19-24 {
+  margin-left: 79.16666667%;
+  *margin-left: NaN%;
+}
 .ui-u-18-24 {
   width: 75%;
   *width: 74.969%;
+}
+.ui-offset-18-24 {
+  margin-left: 75%;
+  *margin-left: NaN%;
 }
 .ui-u-17-24 {
   width: 70.83333333%;
   *width: 70.80233333%;
 }
+.ui-offset-17-24 {
+  margin-left: 70.83333333%;
+  *margin-left: NaN%;
+}
 .ui-u-16-24 {
   width: 66.66666667%;
   *width: 66.63566667%;
+}
+.ui-offset-16-24 {
+  margin-left: 66.66666667%;
+  *margin-left: NaN%;
 }
 .ui-u-15-24 {
   width: 62.5%;
   *width: 62.469%;
 }
+.ui-offset-15-24 {
+  margin-left: 62.5%;
+  *margin-left: NaN%;
+}
 .ui-u-14-24 {
   width: 58.33333333%;
   *width: 58.30233333%;
+}
+.ui-offset-14-24 {
+  margin-left: 58.33333333%;
+  *margin-left: NaN%;
 }
 .ui-u-13-24 {
   width: 54.16666667%;
   *width: 54.13566667%;
 }
+.ui-offset-13-24 {
+  margin-left: 54.16666667%;
+  *margin-left: NaN%;
+}
 .ui-u-12-24 {
   width: 50%;
   *width: 49.969%;
+}
+.ui-offset-12-24 {
+  margin-left: 50%;
+  *margin-left: NaN%;
 }
 .ui-u-11-24 {
   width: 45.83333333%;
   *width: 45.80233333%;
 }
+.ui-offset-11-24 {
+  margin-left: 45.83333333%;
+  *margin-left: NaN%;
+}
 .ui-u-10-24 {
   width: 41.66666667%;
   *width: 41.63566667%;
+}
+.ui-offset-10-24 {
+  margin-left: 41.66666667%;
+  *margin-left: NaN%;
 }
 .ui-u-9-24 {
   width: 37.5%;
   *width: 37.469%;
 }
+.ui-offset-9-24 {
+  margin-left: 37.5%;
+  *margin-left: NaN%;
+}
 .ui-u-8-24 {
   width: 33.33333333%;
   *width: 33.30233333%;
+}
+.ui-offset-8-24 {
+  margin-left: 33.33333333%;
+  *margin-left: NaN%;
 }
 .ui-u-7-24 {
   width: 29.16666667%;
   *width: 29.13566667%;
 }
+.ui-offset-7-24 {
+  margin-left: 29.16666667%;
+  *margin-left: NaN%;
+}
 .ui-u-6-24 {
   width: 25%;
   *width: 24.969%;
+}
+.ui-offset-6-24 {
+  margin-left: 25%;
+  *margin-left: NaN%;
 }
 .ui-u-5-24 {
   width: 20.83333333%;
   *width: 20.80233333%;
 }
+.ui-offset-5-24 {
+  margin-left: 20.83333333%;
+  *margin-left: NaN%;
+}
 .ui-u-4-24 {
   width: 16.66666667%;
   *width: 16.63566667%;
+}
+.ui-offset-4-24 {
+  margin-left: 16.66666667%;
+  *margin-left: NaN%;
 }
 .ui-u-3-24 {
   width: 12.5%;
   *width: 12.469%;
 }
+.ui-offset-3-24 {
+  margin-left: 12.5%;
+  *margin-left: NaN%;
+}
 .ui-u-2-24 {
   width: 8.33333333%;
   *width: 8.30233333%;
+}
+.ui-offset-2-24 {
+  margin-left: 8.33333333%;
+  *margin-left: NaN%;
 }
 .ui-u-1-24 {
   width: 4.16666667%;
   *width: 4.13566667%;
 }
+.ui-offset-1-24 {
+  margin-left: 4.16666667%;
+  *margin-left: NaN%;
+}
 .ui-u-5-5 {
   width: 100%;
   *width: 99.969%;
+}
+.ui-offset-5-5 {
+  margin-left: 100%;
+  *margin-left: NaN%;
 }
 .ui-u-4-5 {
   width: 80%;
   *width: 79.969%;
 }
+.ui-offset-4-5 {
+  margin-left: 80%;
+  *margin-left: NaN%;
+}
 .ui-u-3-5 {
   width: 60%;
   *width: 59.969%;
+}
+.ui-offset-3-5 {
+  margin-left: 60%;
+  *margin-left: NaN%;
 }
 .ui-u-2-5 {
   width: 40%;
   *width: 39.969%;
 }
+.ui-offset-2-5 {
+  margin-left: 40%;
+  *margin-left: NaN%;
+}
 .ui-u-1-5 {
   width: 20%;
   *width: 19.969%;
+}
+.ui-offset-1-5 {
+  margin-left: 20%;
+  *margin-left: NaN%;
 }
 .ui-form fieldset {
   margin: 0;
@@ -2768,16 +2917,16 @@ a.ui.teal.label:hover:before {
   /*--- Outside Label  ---*/
   /*--- Disabled ---*/
 }
-.ui-checkbox.large,
-.ui-radio.large,
-.ui-slider.large,
-.ui-toggle.large {
+.ui-checkbox.ui-large,
+.ui-radio.ui-large,
+.ui-slider.ui-large,
+.ui-toggle.ui-large {
   font-size: 1.125em;
 }
-.ui-checkbox.huge,
-.ui-radio.huge,
-.ui-slider.huge,
-.ui-toggle.huge {
+.ui-checkbox.ui-big,
+.ui-radio.ui-big,
+.ui-slider.ui-big,
+.ui-toggle.ui-big {
   font-size: 1.25em;
 }
 .ui-checkbox input,
@@ -2941,26 +3090,37 @@ a.ui.teal.label:hover:before {
   opacity: 1;
   filter: alpha(opacity=100);
 }
-.ui-checkbox.disabled ~ .box:after,
-.ui-radio.disabled ~ .box:after,
-.ui-slider.disabled ~ .box:after,
-.ui-toggle.disabled ~ .box:after,
+.ui-checkbox.ui-disabled,
+.ui-radio.ui-disabled,
+.ui-slider.ui-disabled,
+.ui-toggle.ui-disabled,
+.ui-checkbox input[disabled],
+.ui-radio input[disabled],
+.ui-slider input[disabled],
+.ui-toggle input[disabled] {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.ui-checkbox.ui-disabled ~ .box:after,
+.ui-radio.ui-disabled ~ .box:after,
+.ui-slider.ui-disabled ~ .box:after,
+.ui-toggle.ui-disabled ~ .box:after,
 .ui-checkbox input[disabled] ~ .box:after,
 .ui-radio input[disabled] ~ .box:after,
 .ui-slider input[disabled] ~ .box:after,
 .ui-toggle input[disabled] ~ .box:after,
-.ui-checkbox.disabled ~ label,
-.ui-radio.disabled ~ label,
-.ui-slider.disabled ~ label,
-.ui-toggle.disabled ~ label,
+.ui-checkbox.ui-disabled ~ label,
+.ui-radio.ui-disabled ~ label,
+.ui-slider.ui-disabled ~ label,
+.ui-toggle.ui-disabled ~ label,
 .ui-checkbox input[disabled] ~ label,
 .ui-radio input[disabled] ~ label,
 .ui-slider input[disabled] ~ label,
 .ui-toggle input[disabled] ~ label,
-.ui-checkbox.disabled label,
-.ui-radio.disabled label,
-.ui-slider.disabled label,
-.ui-toggle.disabled label,
+.ui-checkbox.ui-disabled label,
+.ui-radio.ui-disabled label,
+.ui-slider.ui-disabled label,
+.ui-toggle.ui-disabled label,
 .ui-checkbox input[disabled] label,
 .ui-radio input[disabled] label,
 .ui-slider input[disabled] label,
