--- a/src/css/checkbox.less
+++ b/src/css/checkbox.less
@@ -1,19 +1,23 @@
+// Name:            CheckBox
+// Description:     Defines custom styles for Checkbox
 //
-// CheckBox
-// -----------------------------------------------------------------------------
+// Component:       `ui-(checkbox|toggle|slider|radio)`
 //
-// ### Usage:
-// 提供Checkbox、Slider、Radio、Toggle实现
-
+// Sizes:           `ui-large`
+//                  `ui-big`
 //
-// CheckBox Common
+// States:          `ui-disabled`
 //
-// ### Usage:
+// Markup:
+//
 //  <div class="@{ui-class-prefix}-(checkbox|toggle|slider|radio)">
 //      <input type="" />
 //      <label>label</label> <!-- or <div class="box"></div> -->
 //  </div>
 //
+// ========================================================================
+
+
 .@{ui-class-prefix}-checkbox,
 .@{ui-class-prefix}-radio,
 .@{ui-class-prefix}-slider,
@@ -29,10 +33,10 @@
 
     /*--- Font Sizes ---*/
     font-size: 1em;
-    &.large {
+    &.@{ui-class-prefix}-large {
         font-size: 1.125em;
     }
-    &.huge {
+    &.@{ui-class-prefix}-big {
         font-size: 1.25em;
     }
 
@@ -102,12 +106,12 @@
     /*--- Focus ---*/
     input:focus {
         & ~ label {
-            color: rgba(0, 0, 0, 0.8);
+            color: @checkbox-label-text-active-color;
         }
 
         & ~ label, & ~ .box {
             &:before {
-                .box-shadow(0em 0em 0em 1px rgba(0, 0, 0, 0.3));
+                .box-shadow(0em 0em 0em 1px @checkbox-border-active-color);
             }
         }
     }
@@ -131,10 +135,11 @@
     }
 
     /*--- Disabled ---*/
-    &.disabled, input[disabled] {
+    &.@{ui-class-prefix}-disabled, input[disabled] {
+        .opacity(0);
         ~ .box:after, ~ label, label {
             .opacity(40);
-            color: rgba(0, 0, 0, 0.3);
+            color: @checkbox-label-text-disabled-color;
         }
     }
 }
@@ -233,6 +238,7 @@
         }
     }
 }
+
 .@{ui-class-prefix}-toggle {
     cursor: pointer;
     /* Switch */
@@ -290,4 +296,3 @@
         }
     }
 }
-
