--- a/src/css/mixins.less
+++ b/src/css/mixins.less
@@ -53,7 +53,6 @@
     border-top-left-radius: @radius;
 }
 
-
 .ellipsis(...) {
     overflow: hidden;
 }
@@ -78,47 +77,10 @@
   }
 }
 
-.esf-grid-u {
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-    letter-spacing: normal;
-    word-spacing: normal;
-    vertical-align: top;
-    text-rendering: auto;
+.center-block() {
+    display: block !important;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.make-grid(@grid-columns) {
-  .loop-grid-columns(@grid-columns, false, @grid-columns);
-}
 
-.make-grid(@grid-columns, @class) {
-  .loop-grid-columns(@grid-columns, @class, @grid-columns);
-}
-
-// Basic looping in LESS
-.loop-grid-columns(@index, @class, @total) when (@index >= 0) {
-  .calc-grid-column(@index, @class, @total);
-  // next iteration
-  .loop-grid-columns((@index - 1), @class, @total);
-} 
-
-.calc-grid-column(@index, @class, @total) when (isstring(@class)) and (@index > 0) {
-    .@{ui-class-prefix}-u-@{class}-@{index}-@{total} {
-        width: percentage((@index / @grid-columns));
-        // IE < 8 has issues with rounding, reducing the width slightly prevents the
-        // grid units from wrapping to the next line.
-        *width: percentage((@index / @grid-columns) - 0.00031);
-        &:extend(.esf-grid-u all);
-    }
-}
-
-.calc-grid-column(@index, @class, @total) when (@index > 0) {
-    .@{ui-class-prefix}-u-@{index}-@{total} {
-        width: percentage((@index / @grid-columns));
-        // IE < 8 has issues with rounding, reducing the width slightly prevents the
-        // grid units from wrapping to the next line.
-        *width: percentage((@index / @grid-columns) - 0.00031);
-        &:extend(.esf-grid-u all);
-    }
-}
